Beginning findbugs corrections